--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
     "npm": "1.3"
   },
   "dependencies": {
-    "docpad": "^6.64.3",
-    "docpad-plugin-cleancss": "^2.0.2",
-    "docpad-plugin-coffeekup": "^2.2.0",
-    "docpad-plugin-coffeescript": "^2.4.0",
-    "docpad-plugin-eco": "^2.0.3",
-    "docpad-plugin-highlightjs": "^2.2.1",
-    "docpad-plugin-htmlmin": "^2.4.0",
-    "docpad-plugin-partials": "^2.9.0",
-    "docpad-plugin-repocloner": "^2.2.1",
-    "docpad-plugin-robotskirt": "^2.0.3",
-    "docpad-plugin-services": "^2.5.0",
-    "docpad-plugin-stylus": "^2.6.0",
-    "docpad-plugin-text": "^2.3.2",
-    "docpad-plugin-uglify": "^2.4.0",
+    "docpad": "~6.64.3",
+    "docpad-plugin-cleancss": "~2.0.2",
+    "docpad-plugin-coffeekup": "~2.2.0",
+    "docpad-plugin-coffeescript": "~2.4.0",
+    "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-highlightjs": "~2.2.1",
+    "docpad-plugin-htmlmin": "~2.4.0",
+    "docpad-plugin-partials": "~2.9.0",
+    "docpad-plugin-raw": "~2.3.2",
+    "docpad-plugin-repocloner": "~2.2.1",
+    "docpad-plugin-robotskirt": "~2.0.3",
+    "docpad-plugin-services": "~2.5.0",
+    "docpad-plugin-stylus": "~2.6.0",
+    "docpad-plugin-text": "~2.3.2",
+    "docpad-plugin-uglify": "~2.4.0",
     "extendr": "~2.1.0",
     "moment": "~2.4.0",
     "request": "~2.27.0",
     "uniq": "^1.0.0"
   },
   "devDependencies": {
-    "docpad-plugin-livereload": "^2.6.0"
+    "docpad-plugin-livereload": "~2.6.0"
   },
   "subdomain": "bevry",
   "main": "node_modules/docpad/bin/docpad-server",
