--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "docpad-plugin-coffeekup": "~2.2.0",
     "docpad-plugin-coffeescript": "~2.4.0",
     "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-ect": "~2.0.1",
     "docpad-plugin-highlightjs": "~2.2.1",
     "docpad-plugin-htmlmin": "~2.4.0",
     "docpad-plugin-partials": "~2.9.0",
