got the sidebar dropdown working

--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "docpad-plugin-ect": "~2.0.1",
     "docpad-plugin-highlightjs": "~2.2.1",
     "docpad-plugin-htmlmin": "~2.4.0",
+    "docpad-plugin-marked": "~2.2.1",
     "docpad-plugin-partials": "~2.9.1",
     "docpad-plugin-raw": "~2.3.2",
     "docpad-plugin-repocloner": "~2.2.1",
-    "docpad-plugin-robotskirt": "~2.0.3",
     "docpad-plugin-services": "~2.6.0",
     "docpad-plugin-stylus": "~2.6.0",
     "docpad-plugin-text": "~2.3.2",
