--- a/package.json
+++ b/package.json
@@ -4,6 +4,28 @@
   "private": true,
   "description": "The Bevry Website",
   "homepage": "https://github.com/bevry/learn",
+  "licenses": [
+    {
+      "type": "MIT",
+      "for": "code"
+    },
+    {
+      "type": "CC-BY-4.0",
+      "for": "everything else (including content, media and design)"
+    }
+  ],
+  "badges": {
+    "travis": true,
+    "npm": false,
+    "npmdownloads": false,
+    "david": false,
+    "daviddev": false,
+    "gratipay": "bevry",
+    "flattr": "344188/balupton-on-Flattr",
+    "paypal": "QB8GQPZAH84N6",
+    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a",
+    "wishlist": "http://amzn.com/w/2F8TXKSNAFG4V"
+  },
   "author": "Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
@@ -19,8 +41,8 @@
     "url": "http://github.com/bevry/learn.git"
   },
   "engines": {
-    "node": "0.10",
-    "npm": "1.3"
+    "node": "0.12",
+    "npm": "2"
   },
   "dependencies": {
     "docpad": "~6.65.0",
@@ -39,22 +61,18 @@
     "docpad-plugin-stylus": "~2.6.0",
     "docpad-plugin-text": "~2.3.2",
     "docpad-plugin-uglify": "~2.4.0",
-    "extendr": "~2.1.0",
-    "moment": "~2.4.0",
-    "request": "~2.27.0"
+    "extendr": "^2.1.0",
+    "moment": "^2.4.0",
+    "request": "^2.27.0"
   },
   "devDependencies": {
-    "docpad-plugin-livereload": "~2.6.0"
+    "docpad-plugin-livereload": "~2.6.0",
+    "projectz": "^0.5.0"
   },
-  "subdomain": "bevry",
-  "main": "node_modules/docpad/bin/docpad-server",
+  "main": "node_modules/.bin/docpad-server",
   "scripts": {
-    "start": "node_modules/docpad/bin/docpad-server"
-  },
-  "cakeConfiguration": {
-    "COFFEE_OUT_PATH": "app/out",
-    "COFFEE_SRC_PATH": "app/src",
-    "DOCPAD_OUT_PATH": "site/out",
-    "DOCPAD_SRC_PATH": "site/src"
+    "start": "node_modules/.bin/docpad-server",
+    "test": "node_modules/.bin/docpad generate --debug --silent",
+    "info": "node_modules/.bin/docpad info --silent"
   }
 }
