update meta files

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
   ],
   "contributors": [
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
+    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
+    "ginader (https://github.com/ginader)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/learn/issues"
