--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "docpad": "~6.76.1",
+    "docpad-plugin-cleanurls": "~2.8.1",
     "docpad-plugin-cleancss": "~2.1.0",
     "docpad-plugin-coffeekup": "~2.2.0",
     "docpad-plugin-coffeescript": "~2.5.0",
@@ -62,18 +63,18 @@
     "docpad-plugin-stylus": "~2.9.0",
     "docpad-plugin-text": "~2.3.3",
     "docpad-plugin-uglify": "~2.4.0",
-    "extendr": "^2.1.0",
-    "moment": "^2.4.0",
-    "request": "^2.27.0"
+    "moment": "^2.4.0"
   },
   "devDependencies": {
+    "docpad-plugin-ghpages": "~2.4.4",
     "docpad-plugin-livereload": "~2.6.1",
     "projectz": "^0.5.0"
   },
   "main": "node_modules/.bin/docpad-server",
   "scripts": {
     "start": "node_modules/.bin/docpad-server",
-    "test": "node_modules/.bin/docpad generate --debug --silent",
-    "info": "node_modules/.bin/docpad info --silent"
+    "test": "node_modules/.bin/docpad generate --silent --debug",
+    "info": "node_modules/.bin/docpad info --silent",
+    "deploy": "node_modules/.bin/docpad deploy-ghpages --silent --env static"
   }
 }
