--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
   "private": true,
   "description": "The Bevry Website",
   "homepage": "https://github.com/bevry/learn",
-  "licenses": [
-    {
-      "type": "MIT",
-      "for": "code"
-    },
-    {
-      "type": "CC-BY-4.0",
-      "for": "everything else (including content, media and design)"
-    }
-  ],
+  "license": "(MIT OR CC-BY-4.0)",
   "badges": {
-    "travis": true,
-    "npm": false,
-    "npmdownloads": false,
-    "david": false,
-    "daviddev": false,
-    "gratipay": "bevry",
-    "flattr": "344188/balupton-on-Flattr",
-    "paypal": "QB8GQPZAH84N6",
-    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a",
-    "wishlist": "http://amzn.com/w/2F8TXKSNAFG4V"
+    "list": [
+      "travisci",
+      "---",
+      "slackin",
+      "patreon",
+      "gratipay",
+      "flattr",
+      "paypal",
+      "bitcoin",
+      "wishlist"
+    ],
+    "config": {
+      "patreonUsername": "bevry",
+      "gratipayUsername": "bevry",
+      "flattrUsername": "balupton",
+      "paypalURL": "https://bevry.me/paypal",
+      "bitcoinURL": "https://bevry.me/bitcoin",
+      "wishlistURL": "https://bevry.me/wishlist",
+      "slackinURL": "https://slack.bevry.me"
+    }
   },
   "author": "Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
@@ -42,8 +43,8 @@
     "url": "http://github.com/bevry/learn.git"
   },
   "engines": {
-    "node": "0.12",
-    "npm": "2"
+    "node": "5",
+    "npm": "3"
   },
   "dependencies": {
     "docpad": "~6.78.1",
@@ -68,12 +69,12 @@
   "devDependencies": {
     "docpad-plugin-ghpages": "~2.4.4",
     "docpad-plugin-livereload": "~2.6.1",
-    "projectz": "^0.5.0"
+    "projectz": "^1.0.0"
   },
   "main": "node_modules/.bin/docpad-server",
   "scripts": {
     "start": "node_modules/.bin/docpad-server",
-    "test": "node_modules/.bin/docpad generate --silent --debug",
+    "test": "node_modules/.bin/docpad generate --silent",
     "info": "node_modules/.bin/docpad info --silent",
     "deploy": "node_modules/.bin/docpad deploy-ghpages --silent --env static"
   }
