--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bevry-learn",
-  "version": "0.1.22",
+  "version": "0.2.0",
   "private": true,
   "description": "The Bevry Website",
   "homepage": "https://github.com/bevry/learn",
@@ -55,16 +55,16 @@
     "docpad-plugin-cleanurls": "~2.8.1",
     "docpad-plugin-coffeekup": "~2.2.0",
     "docpad-plugin-coffeescript": "~2.5.0",
+    "docpad-plugin-downloader": "~2.1.4",
     "docpad-plugin-eco": "~2.1.0",
     "docpad-plugin-highlightjs": "~2.4.0",
     "docpad-plugin-marked": "~2.3.0",
-    "docpad-plugin-partials": "~2.9.2",
     "docpad-plugin-raw": "~2.4.1",
     "docpad-plugin-repocloner": "~2.2.2",
     "docpad-plugin-stylus": "~2.11.0",
     "docpad-plugin-text": "~2.3.3",
-    "docpad-plugin-uglify": "~2.4.0",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "outpatient": "^1.0.0"
   },
   "devDependencies": {
     "coffeelint": "^1.16.0",
