--- a/.travis.yml
+++ b/.travis.yml
@@ -1,86 +1,18 @@
-# 2015 August 25
+# 2017 May 26
 # https://docpad.org/docs/deploy
-
+# https://github.com/balupton/awesome-travis
 sudo: false
 language: node_js
 node_js:
-  - "6"     # lts
+- "7"
 cache:
   directories:
-    - $HOME/.npm  # http://stackoverflow.com/q/42521884/130638
-
-install: |
-  # Ensure NPM is latest
-  # https://github.com/balupton/awesome-travis#ensure-npm-is-latest
-  export CURRENT_NPM_VERSION="$(npm --version)" || exit -1
-  export LATEST_NPM_VERSION="$(npm view npm version)" || exit -1
-  if test "$CURRENT_NPM_VERSION" != "$LATEST_NPM_VERSION"; then
-    echo "running an old npm version $CURRENT_NPM_VERSION, upgrading npm to $LATEST_NPM_VERSION..."
-    npm install npm --global --cache-min=Infinity || exit -1
-    echo "...npm upgrade complete"
-  fi
-
-install: |
-  # Ensure dependencies install with a LTS node version
-  # https://github.com/balupton/awesome-travis#use-lts-node-version-for-preparation
-  export CURRENT_NODE_VERSION="$(node --version)" || exit -1
-  export LTS_NODE_VERSIONS="$(nvm ls-remote --lts)" || exit -1
-  if echo "$LTS_NODE_VERSIONS" | grep "$CURRENT_NODE_VERSION"; then
-    echo "running on a LTS node version, completing setup..."
-    npm run our:setup || exit -1
-    echo "...setup complete with current LTS version"
-  else
-    echo "running on a non-LTS node version, completing setup on a LTS node version..."
-    nvm install --lts
-    export LTS_NODE_INSTALLED_VERSION="$(node --version)" || exit -1
-    npm run our:setup || exit -1
-    nvm use "$TRAVIS_NODE_VERSION" || exit -1
-    echo "...setup complete with LTS"
-  fi
-
-before_script: |
-  # Ensure compilation and linting occur on a LTS node version
-  # https://github.com/balupton/awesome-travis#use-lts-node-version-for-preparation
-  if test "$LTS_NODE_INSTALLED_VERSION"; then
-    echo "running on a non-LTS node version, compiling with LTS, skipping linting..."
-    nvm use "$LTS_NODE_INSTALLED_VERSION" || exit -1
-    npm run our:compile || exit -1
-    nvm use "$TRAVIS_NODE_VERSION" || exit -1
-    echo "...compiled"
-  else
-    echo "running on a LTS node version, compiling and linting..."
-    npm run our:compile && npm run our:verify || exit -1
-    echo "...compiled and linted"
-  fi
-
-after_success: |
-  # Custom Deployment
-  # https://github.com/balupton/awesome-travis#npm-script-deployment
-  if ([ "$TRAVIS_BRANCH" == "$DEPLOY_BRANCH" ] &&
-      [ -z "$TRAVIS_TAG" ] &&
-      [ "$TRAVIS_PULL_REQUEST" == "false" ]); then
-    echo "deploying..."
-    npm run deploy || exit -1
-    echo "...deployed"
-  else
-    echo "skipped deploy"
-  fi
-
-
-# ========================================
-# Custom Configuration
-
-env:
-  global:
-  # Custom Deploy
-  # travis encrypt "SURGE_LOGIN=$SURGE_LOGIN" --add env.global
-  # travis encrypt "SURGE_TOKEN=$SURGE_TOKEN" --add env.global
-  - DEPLOY_BRANCH='master'  # this is the branch that you want deployed
-  - secure: Zrcl+LCeKVbwStqiITOqR+VGOTzzvdw1O+lfWLt62nc8HCvsvMdQISMu1XuQQyb8zcr5b1G7jCb7dz8Fd58/qOH5Et7H8lPCkMyCIEsAyB4fMyJUo5KUvgG7WGf41PzLQG1qDJfi7m56CfhUkXSlVxlGaApzrfw9m+GNHZb0lls=
-  - secure: Vu+TgBn6/QM9BZ3/9u775EV6VRESUG+zGorR5C+JNPClKkzWKwjPOEoBwdqOXuVtL2m398tYU1Z1/W1UPIXbjnLskPHvqrWbhs33NGGRzb3C3llPtNhY/Lh+Q6rbKFLCjjhh4I3bqNQ01pC1Tx5/JPqAW6xBPr29EBTmnx7GUSw=
-
-# https://github.com/balupton/awesome-travis#slack
-# https://github.com/balupton/awesome-travis#email
+    - $HOME/.npm  # npm's cache
+    - $HOME/.yarn-cache  # yarn's cache
+before_script:
+- npm run our:verify
+after_success:
+- eval "$(curl -s https://raw.githubusercontent.com/balupton/awesome-travis/master/scripts/deploy-custom.bash)"
 notifications:
   slack:
     secure: DhJEwkGg347WIite3EeCOvw7QqehI2fEeDwrtS9ApzYuoLMB1pAl5ZgRi41Kg3H7UxKBLlaY6PAEFY2cp5FuDM+l61srKjO4llP3PrPADujyBweIzkXmvJlelJuJ5kUujh34eWCEkoLbQXHhJup1MHffi24Z9lJV5E+ArhtX7FQ=
